# recombigraph

./: .gitignore  README.md  pyproject.toml
notebooks/: check_against_PedigreeSim.ipynb  recombigraph_demo.ipynb
notebooks/PedigreeSim_results/: example.chrom  example.params  example.ped  example_out.hsa  example_out.hsb
pedigraph_sim/: __init__.py  ancestry.py  export.py  pedigree.py
recombigraph/: __init__.py  arg.py  export.py  genome.py  meiosis.py  pedigree.py  simulate.py  visualize.py
tests/: test_arg_workflow.py  test_basic.py
