[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pedigraph-sim"
version = "0.1.0"
description = "Pedigree-based recombination simulation with explicit homolog tracking."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Patrick McKenzie" }
]
license = "MIT"
keywords = ["genetics", "pedigree", "recombination", "simulation", "ancestry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "matplotlib",
    "networkx",
]

[project.urls]
Homepage = "https://github.com/pmckenz1/recombigraph"
Repository = "https://github.com/pmckenz1/recombigraph"
Issues = "https://github.com/pmckenz1/recombigraph/issues"

[tool.setuptools]
packages = ["pedigraph_sim"]

[project.optional-dependencies]
test = [
    "pytest>=7",
]
dataframe = [
    "pandas",
]
tskit = [
    "tskit",
]
all = [
    "pandas",
    "tskit",
]

[tool.pytest.ini_options]
pythonpath = ["."]
